<resources>
    <string name="app_name">TheNote</string>
    <string name="enable_notifications_summary">Turn on to get notifications for new notes</string>
    <string name="enable_notifications_title">Enable notifications</string>
    <string name="dark_mode_summary">Enable dark mode</string>
    <string name="dark_mode_title">Dark Mode</string>
    <string name="language_options_summary">Select your preferred language</string>
    <string name="language_options_title">Language</string>
    <string name="username_summary">Enter your username</string>
    <string name="username_title">Username</string>
    <string name="font_size_options_summary">Select the font size</string>
    <string name="font_size_options_title">Font Size</string>
    <string name="settings_title_notes">Notizen</string>
    <string name="settings_title_general">General</string>
    <string name="note_color_options_summary">Select the default color for new notes</string>
    <string name="note_color_options_title">Default Note Color</string>
    <string name="auto_save_notes_summary">Enable/disable automatic saving of notes</string>
    <string name="auto_save_notes_title">Auto Save Notes</string>
    <string name="sort_options_summary">Select the sort order for notes</string>
    <string name="sort_options_title">Note Sort Order</string>
    <string name="show_note_timestamp_summary">Enable/disable displaying timestamps on notes</string>
    <string name="show_note_timestamp_title">Show Note Timestamp</string>
    <string name="enable_note_reminders_summary">Enable/disable setting reminders for notes</string>
    <string name="enable_note_reminders_title">Enable Note Reminders</string>
    <string name="title_activity_settings">title_activity_settings</string>
    <string name="ViewFolderIcon">ViewFolderIcon</string>
    <string name="button_settings_text">Settings</string>
    <string name="editText_category_name_hint">Category Name</string>
    <string name="button_category_create_text">Create</string>
    <string name="button_category_cancel_text">Cancel</string>
    <string name="button_label_save_text">Save Label</string>
    <string name="button_label_cancel_text">Cancel</string>
    <string name="editText_label_name_hint">Label Name</string>
    <string name="editText_note_hint">Note</string>
    <string name="button_camera_text">Camera</string>
    <string name="editText_search_hint">Search Note</string>
    <string name="imageView_note_description">imageView_note</string>
    <string name="button_editor_text">Editor</string>
    <string name="button_viewer_text">Viewer</string>
    <string name="button_organizer_text">Organizer</string>
    <string name="action_settings">Settings</string>
</resources>