<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/settings_title_general">
        <SwitchPreference
            app:key="pref_key_enable_notifications"
            app:summary="@string/enable_notifications_summary"
            app:title="@string/enable_notifications_title" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="pref_key_dark_mode"
            app:summary="@string/dark_mode_summary"
            app:title="@string/dark_mode_title" />

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/language_options"
            app:entryValues="@array/language_values"
            app:key="pref_key_language"
            app:summary="@string/language_options_summary"
            app:title="@string/language_options_title" />

        <EditTextPreference
            app:defaultValue=""
            app:key="pref_key_username"
            app:summary="@string/username_summary"
            app:title="@string/username_title" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/settings_title_notes">
        <ListPreference
            app:defaultValue="medium"
            app:entries="@array/font_size_options"
            app:entryValues="@array/font_size_values"
            app:key="pref_key_font_size"
            app:summary="@string/font_size_options_summary"
            app:title="@string/font_size_options_title" />

        <ListPreference
            app:defaultValue="yellow"
            app:entries="@array/note_color_options"
            app:entryValues="@array/note_color_values"
            app:key="pref_key_default_note_color"
            app:summary="@string/note_color_options_summary"
            app:title="@string/note_color_options_title" />


        <SwitchPreference
            app:defaultValue="true"
            app:key="pref_key_auto_save_notes"
            app:summary="@string/auto_save_notes_summary"
            app:title="@string/auto_save_notes_title" />

        <ListPreference
            app:defaultValue="date"
            app:entries="@array/note_sort_options"
            app:entryValues="@array/note_sort_values"
            app:key="pref_key_note_sort_order"
            app:summary="@string/sort_options_summary"
            app:title="@string/sort_options_title" />

        <SwitchPreference
            app:defaultValue="true"
            app:key="pref_key_show_note_timestamp"
            app:summary="@string/show_note_timestamp_summary"
            app:title="@string/show_note_timestamp_title" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="pref_key_enable_note_reminders"
            app:summary="@string/enable_note_reminders_summary"
            app:title="@string/enable_note_reminders_title" />
    </PreferenceCategory>
</PreferenceScreen>